--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,4 +1,7 @@
-<h1>Articles</h1>
+<header>
+	<h1>Articles</h1>
+</header>
+
 <%= @articles.each do |art| %>
 <table>
 	<tr>
@@ -10,3 +13,6 @@
 	</tr>
 </table>
 <% end %>
+
+<footer>
+</footer>
