--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,4 +1,7 @@
-<h1>New Article</h1>
+<header>
+	<h1>New Article</h1>
+</header>
+
 <%= form_for(@article) do |f| %>
 	<%= f.label :title %>
 	<%= f.text_field :title %><br>
@@ -8,3 +11,6 @@
 
 	<%= f.submit 'Submit' %>
 <% end %>
+
+<footer>
+</footer>
