--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,2 +1,8 @@
-<h1><%= @article.title %></h1>
+<header>
+	<h1><%= @article.title %></h1>
+</header>
+
 <p><%= @article.body.html_safe %></p>
+
+<footer>
+</footer>
