--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,10 @@
-<h1>The Hitchhiker's Guide to Goldstar</h1>
-<p>Don't Panic</p>
+<header>
+	<div class="container-dark">
+		<h1>The Hitchhiker's Guide to Goldstar</h1>
+	</div>
+</header>
+
+<h2 class="home">Don't Panic</h2>
+
+<footer>
+</footer>
