--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,7 @@
-<h1>Users</h1>
+<header>
+	<h1>Users</h1>
+</header>
+
 <%= @user.each do |user| %>
 <table>
 <tr>
@@ -10,3 +13,6 @@
 </tr>
 </table>
 <% end %>
+
+<footer>
+</footer>
