--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,15 +6,19 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
-<body style="background-color:#000001;">
-	<%= render 'layouts/header' %>
-	<div class="home">
-		<% flash.each do |type, msg| %>
-			<%= type %>: <%= msg %>
-		<% end %>
-		<%= yield %>
+<body style="background-color:#000000;">
+	<div class="background">
+		<%= render 'layouts/header' %>
+			<div class="content">
+				<% flash.each do |type, msg| %>
+					<div class="error">
+						<%= type %>: <%= msg %>
+					</div>
+				<% end %>
+			<%= yield %>
+		</div>
+		<%= render 'layouts/footer' %>
 	</div>
-	<%= render 'layouts/footer' %>
 	<%= debug(params) if Rails.env.development? %>
 </body>
 </html>
