--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,7 @@
-<h1>Edit User</h1>
+<header>
+	<h1>Edit User</h1>
+</header>
+
 <%= form_for(@user) do |f| %>
 	<%= f.label :name %>
 	<%= f.text_field :name %><br>
@@ -8,3 +11,6 @@
 
 	<%= f.submit 'Submit' %>
 <% end %>
+
+<footer>
+</footer>
