--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,18 +1,36 @@
-<h1>Signup</h1>
-<%= form_for(@user) do |f| %>
-	<%= render 'shared/error_messages' %>
-	
-	<%= f.label :name %>
-	<%= f.text_field :name %><br>
+<header>
+	<h1>Signup</h1>
+</header>
 
-	<%= f.label :email %>
-	<%= f.email_field :email %><br>
+<div id="container-salmon">
+	<table class="form">
+		<%= form_for(@user) do |f| %>
+			<tr><td>
+				<h2><%= f.label :name %></h2>
+				<%= f.text_field :name %><br>
+			</td></tr>
 
-	<%= f.label :password %>
-	<%= f.password_field :password %><br>
+			<tr><td>
+				<h2><%= f.label :email %></h2>
+				<%= f.email_field :email %><br>
+			</td></tr>
 
-	<%= f.label :password_confirmation, "Confirmation" %>
-	<%= f.password_field :password_confirmation %><br>
+			<tr><td>
+				<h2><%= f.label :password %></h2>
+				<%= f.password_field :password %><br>
+			</td></tr>
 
-	<%= f.submit 'Submit' %>
-<% end %>
+			<tr><td>
+				<h2><%= f.label :password_confirmation, "Confirmation" %></h2>
+				<%= f.password_field :password_confirmation %><br>
+			</td></tr>
+
+			<tr><td>
+				<%= f.submit 'Submit' %>
+			</td></tr>
+		<% end %>
+	</table>
+</div>
+
+<footer>
+</footer>
