switch to mysql db and populate with data. Add admin to users

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -2,7 +2,7 @@
 	<h1>Articles</h1>
 </header>
 
-<%= @articles.each do |art| %>
+<% @articles.each do |art| %>
 <table>
 	<tr>
 		<td><%= art.title %></td>
@@ -14,5 +14,3 @@
 </table>
 <% end %>
 
-<footer>
-</footer>
