--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,17 +2,14 @@
 	<h1>Users</h1>
 </header>
 
-<%= @user.each do |user| %>
+<% @user.each do |user| %>
 <table>
-<tr>
-	<td><%= user.name %></td>
-	<td><%= user.email %></td>
-	<td><%= link_to 'Show', user_path(user) %></td>
-	<td><%= link_to 'Edit', edit_user_path(user) %></td>
-	<td><%= link_to 'Delete', user_path(user), data: { :confirm => 'Are you sure?' }, method: :delete %></td>
-</tr>
+	<tr>
+		<td><%= user.name %></td>
+		<td><%= user.email %></td>
+		<td><%= link_to 'Show', user_path(user) %></td>
+		<td><%= link_to 'Edit', edit_user_path(user) %></td>
+		<td><%= link_to 'Delete', user_path(user), data: { :confirm => 'Are you sure?' }, method: :delete %></td>
+	</tr>
 </table>
 <% end %>
-
-<footer>
-</footer>
