--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,8 +1,4 @@
 <ul class="header">
 	<li><%= link_to 'Wiki', root_path %>
-	<li><% if logged_in? %>
-				<%= link_to 'Log out', logout_path, method: "delete" %>
-			<% else %>
-				<%= link_to 'Log in', login_path %>
-			<% end %>
+	<li><%= current_user ? link_to('Log out', logout_path, method: "delete") : link_to('Log in', login_path) %>
 </ul>
