--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,14 +2,16 @@
 	<h1>Users</h1>
 </header>
 
-<% @user.each do |user| %>
 <table>
+	<% @users.each do |user| %>
 	<tr>
 		<td><%= user.name %></td>
 		<td><%= user.email %></td>
 		<td><%= link_to 'Show', user_path(user) %></td>
 		<td><%= link_to 'Edit', edit_user_path(user) %></td>
-		<td><%= link_to 'Delete', user_path(user), data: { :confirm => 'Are you sure?' }, method: :delete %></td>
+		<% if admin_present? && !user.admin %>
+			<td><%= link_to 'Delete', user_path(user), data: { :confirm => 'Are you sure?' }, method: :delete %></td>
+		<% end %>
 	</tr>
+	<% end %>
 </table>
-<% end %>
